fixed img alignment

--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -75,6 +75,7 @@ body {
 
 .materialboxed.initialized.flight {
     border-radius: 8%;
+    padding-right: 14px;
 }
 
 .title {
@@ -89,4 +90,8 @@ body {
 
 .tech, p {
     font-family: 'Lato', sans-serif;
+}
+
+.materialboxed.initialized {
+    padding-right: 14px;
 }
